--- a/.mergify.yml
+++ b/.mergify.yml
@@ -26,6 +26,6 @@ pull_request_rules:
         method: merge
         strict: true
       label:
-        remove: [ready-to-merge]
+        remove: [ready-to-merge,work-in-progress]
       delete_head_branch:
         force: false
