--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,6 +3,7 @@ pull_request_rules:
   - name: set new pr to work-in-progress
     conditions:
       - label!=ready-to-merge
+      - -merged
     actions:
       comment:
         message: Please change the label of your pull request to `ready-to-merge` once you're done with your changes. Thanks!
